# alibabacloud-dms-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
doc/: README-zh-cn.md
src/alibabacloud_dms_mcp_server/: __init__.py  server.py
